chore: udpate JDK to 27.0.0+35